hard-gists/5352608/run.log
=== Docker Run Log for 5352608 ===
Started at: Mi 29. Okt 15:37:14 CET 2025

[2025-10-29 15:37:15] START: Running container for 5352608
[2025-10-29 15:37:15] SUCCESS: Container 31de803a7539e9c8bb53556ae22e75de1e8a1126382264ea5af25a3ef4f787f0 started for 5352608
=== Container logs for 5352608 ===
  File "/snippet.py", line 30
    print "Hello {0}".format(name)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5352608 ===
[2025-10-29 15:37:17] INFO: Container 31de803a7539e9c8bb53556ae22e75de1e8a1126382264ea5af25a3ef4f787f0 has stopped
